Updated with animae

--- a/html/007_apple_hk.html
+++ b/html/007_apple_hk.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/007_apple_hk.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="../js/collapseSideNav.js"></script>
+    <script type="text/javascript" src="../js/togglePrimaryNav.js"></script>
 </head>
 <body>
 <!-- HTB: Headline top bar -->
@@ -14,7 +14,7 @@
     <!-- Headline top bar: icon -->
     <svg xmlns="http://www.w3.org/2000/svg"
          class="htbi"
-         onclick="toggleHKNav()"
+         onclick="togglePrimaryNav()"
          viewBox="0 0 24 24">
         <path d="M0 0h24v24H0V0z" fill="none"/>
         <path d="M4 15h16v-2H4v2zm0 4h16v-2H4v2zm0-8h16V9H4v2zm0-6v2h16V5H4z"/>
