--- a/html/007_apple_hk.html
+++ b/html/007_apple_hk.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>HK</title>
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favs/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../images/favs/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favs/favicon-16x16.png">
+    <link rel="manifest" href="../images/favs/site.webmanifest">
+    <link rel="mask-icon" href="../images/favs/safari-pinned-tab.svg" color="#ff0000">
+    <link rel="shortcut icon" href="../images/favs/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="../images/favs/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Favicons End -->
     <link rel="stylesheet" href="../css/007_apple_hk.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
