--- a/html/009_nav_animation.html
+++ b/html/009_nav_animation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Transition</title>
     <link rel="stylesheet" href="../css/009_nav_animation.css">
+    <link rel="icon" type="image/svg+xml" href="../images/icons8-exercise-96.png">
 </head>
 <body>
 
